--- a/client/src/app/pages/login/login.page.scss
+++ b/client/src/app/pages/login/login.page.scss
@@ -16,8 +16,10 @@
   }
   
   .form-control {
+    display: flex;
+    justify-content: center;
     display: block;
-    width: 90%;
+    width: 80%;
     margin-left: 12px;
     padding: 0.5rem 0.75rem;
     font-size: 1rem;
@@ -28,6 +30,8 @@
     border: 0.5px solid #ced4da;
     border-radius: 0.5rem;
     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    margin: 0 12px;
+
   }
   
   .form-text {
