--- a/client/src/app/pages/signup/signup.page.scss
+++ b/client/src/app/pages/signup/signup.page.scss
@@ -17,7 +17,7 @@
   
   .form-control {
     display: block;
-    width: 90%;
+    width: 80%;
     margin-left: 12px;
     padding: 0.5rem 0.75rem;
     font-size: 1rem;
@@ -28,6 +28,9 @@
     border: 0.5px solid #ced4da;
     border-radius: 0.5rem;
     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    justify-content: center;
+    margin: 0 12px;
+
   }
   
   .form-text {
