--- a/client/src/app/pages/welcome/welcome.page.scss
+++ b/client/src/app/pages/welcome/welcome.page.scss
@@ -115,12 +115,21 @@ ion-button ion-icon {
     margin-top: 50px;
     width: auto; 
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(calc(200px - 20px), 1fr)); 
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); 
     gap: 25px; 
     padding: 15px;
     position: relative;
     z-index: 99;
 }
+
+/* Media query for smaller screens */
+@media (max-width: 768px) {
+    .items-container {
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+        gap: 15px;
+    }
+}
+
 
 .empty-space {
     height: 180px;
@@ -150,6 +159,7 @@ ion-footer {
     transform: translateX(-50%);
     padding: 0 45px; 
     z-index: 100;
+    
 }
   
 .navbar-button {
