--- a/client/src/app/pages/shop/home-shop/home-shop.page.html
+++ b/client/src/app/pages/shop/home-shop/home-shop.page.html
@@ -1,15 +1,19 @@
-<div class="bezbez-details">
-  <div class="bezbez-info">
-    <img src="../../../assets/images/bezbez-1.jpeg" alt="bezbez-logo" class="bezbez-logo">
-    <p class="bezbez-name">hi bezbez-name shop</p>
+<ion-header>
+  <div class="header-content">
+    <img src="../../../../assets/images/bezbez-1.jpeg" alt="Logo">
+    <p class="title">Welcome bezbez-owner!</p>
   </div>
-  
-</div>
-<ion-progress-bar  value="1" style="color:  gray;"></ion-progress-bar>
-<div class="center-image ">
-<img  src="../../../assets/icon/kit.png" alt="">
-<h2> Start adding your first product</h2>
-<ion-button fill="outline" href="/add-product-shop1" > add product</ion-button>
-</div>
-<app-shop-nav-bar></app-shop-nav-bar>
+</ion-header>
+
+<ion-content>
+  <div class="center-image ">
+    <img  src="../../../assets/icon/kit.png" alt="">
+    <h2> Start adding your first product</h2>
+    <ion-button fill="outline" href="/add-product-shop1" >Add Product</ion-button>
+  </div>
+</ion-content>
+
+<ion-footer>
+  <app-shop-nav-bar></app-shop-nav-bar>
+</ion-footer>
 
