--- a/client/src/app/pages/shop/home-shop/home-shop.page.scss
+++ b/client/src/app/pages/shop/home-shop/home-shop.page.scss
@@ -6,9 +6,40 @@ $maroon: #895159;
 $peach: #DFAEA2;
 $grey: #918f8f;
 
+/* Typography */
 
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Song+Myung&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Song+Myung&family=Sora:wght@100..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Song+Myung&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Encode+Sans:wght@100..900&display=swap');
 
-
+ion-header {
+    height: 60px; 
+    margin-top: 20px;
+    margin-bottom: 5px;
+    
+    .header-content {
+      display: flex;
+      align-items: center;
+      padding-left: 10px; 
+      height: 100%; 
+    }
+  
+    img {
+      width: 80px; 
+      height: auto; 
+      margin-right: 10px; 
+    }
+  
+    .title {
+      font-family: 'Sora', sans-serif;
+      font-size: 24px;
+      font-weight: 600;
+      line-height: 120%;
+      letter-spacing: -2%;
+      margin: 0; 
+    }
+}
 
 .bezbez-details {
 
@@ -66,4 +97,14 @@ p{
     font-weight: 500;
     line-height: 140%;
     letter-spacing: .3%;
+}
+
+ion-footer {
+    height: 100px;
+    background-color: white;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    z-index: 101;
 }
